fix(css): url word-break for justify align

--- a/assets/scss/base/_data-attributes.scss
+++ b/assets/scss/base/_data-attributes.scss
@@ -16,6 +16,11 @@
             text-justify: distribute;
         }
     }
+    .footnotes {
+        a {
+            word-break: break-all;
+        }
+    }
 }
 [data-align="center"] {
     .post-body p {
